#60 fix spacing

--- a/public_html/templates/perfecttemplate/assets/scss/organisms/_card.scss
+++ b/public_html/templates/perfecttemplate/assets/scss/organisms/_card.scss
@@ -11,15 +11,33 @@
 		//}
 
 		@include e('image') {
+			padding: 0 $base-spacing;
+
+			a {
+				display: block;
+			}
+
+			@include media($charlie) {
+				padding: 0;
+			}
 
 			@include m('border') {
 				border: 1px solid $jd-gray;
-				padding: 2 * $base-spacing 0;
+				padding: 2 * $base-spacing $base-spacing;
+
+				@include media($charlie) {
+					padding: 2 * $base-spacing 0;
+				}
 			}
 		}
 
 		@include e('content') {
 			position: relative;
+			padding: 0 $base-spacing;
+
+			@include media($charlie) {
+				padding: 0;
+			}
 		}
 
 		@include media($charlie) {
@@ -59,7 +77,6 @@
 	padding: $base-spacing 0;
 	@include e('header') {
 		position: relative;
-		padding-right: 3 * $base-spacing;
 		h1 {
 			margin-top: 0;
 		}
@@ -77,6 +94,10 @@
 			text-transform: lowercase;
 			padding: 0 $base-spacing * 0.125;
 			@include font($font-size--h4, $normal, $line-height, $font-family);
+		}
+
+		@include media($charlie) {
+			padding-right: 3 * $base-spacing;
 		}
 
 	}
